head/iptables
# Generated by iptables-save v1.4.21 on Thu Feb  4 19:42:55 2016
*nat
:PREROUTING ACCEPT [767:102835]
:INPUT ACCEPT [11:2564]
:OUTPUT ACCEPT [4:256]
:POSTROUTING ACCEPT [3:180]
-A POSTROUTING -o eno1 -j MASQUERADE
COMMIT
# Completed on Thu Feb  4 19:42:55 2016
# Generated by iptables-save v1.4.21 on Thu Feb  4 19:42:55 2016
*filter
:INPUT DROP [897:107042]
:FORWARD ACCEPT [32:8435]
:OUTPUT ACCEPT [224:28874]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -j ACCEPT

# dns
-A INPUT -p udp --source-port 53 -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --dport 443 -j ACCEPT

# nodes
-A INPUT -p tcp -s 192.168.0.0/24 -j ACCEPT
-A OUTPUT -p tcp -d 192.168.0.0/24 -j ACCEPT

#Keep existing connections
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited


-A FORWARD -i eth0 -j ACCEPT
-A INPUT -i eth0 -j ACCEPT

COMMIT
